erDiagram
    SUPPLIERS ||--o{ PRODUCTS : supplies
    SUPPLIERS ||--o{ STOCK_ENTRIES : delivers
    PRODUCTS ||--o{ STOCK_ENTRIES : stocked_by_entry
    WAREHOUSES ||--o{ STOCK_ENTRIES : receives
    PRODUCTS ||--o{ INVENTORY_HISTORY : tracked_in
    WAREHOUSES ||--o{ INVENTORY_HISTORY : tracked_in
    PRODUCTS ||--o{ WAREHOUSE_STOCK : current_balance
    WAREHOUSES ||--o{ WAREHOUSE_STOCK : current_balance
    STOCK_ENTRIES ||--o{ INVENTORY_HISTORY : references

    SUPPLIERS {
        INT supplier_id PK
        VARCHAR supplier_name
        VARCHAR address
        VARCHAR phone_number
        VARCHAR email
        VARCHAR contact_person
        ENUM status
        DATETIME created_at
    }

    PRODUCTS {
        INT product_id PK
        VARCHAR product_name
        VARCHAR description
        DECIMAL unit_price
        INT supplier_id FK
        INT reorder_level
        VARCHAR unit
        BOOLEAN is_active
        DATETIME created_at
    }

    WAREHOUSES {
        INT warehouse_id PK
        VARCHAR warehouse_name
        VARCHAR address
        INT capacity
        VARCHAR manager_name
        VARCHAR phone_number
        DATETIME created_at
    }

    WAREHOUSE_STOCK {
        BIGINT stock_id PK
        INT warehouse_id FK
        INT product_id FK
        INT quantity_on_hand
        DATETIME last_updated
    }

    STOCK_ENTRIES {
        BIGINT entry_id PK
        INT product_id FK
        INT warehouse_id FK
        INT supplier_id FK
        INT quantity
        DECIMAL unit_cost
        DATETIME entry_date
        VARCHAR notes
    }

    INVENTORY_HISTORY {
        BIGINT history_id PK
        INT product_id FK
        INT warehouse_id FK
        INT quantity
        ENUM transaction_type
        DATETIME transaction_date
        BIGINT reference_entry_id FK
        VARCHAR notes
    }
